[package]
name = "backtesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.18.0"
csv = "1.1"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
log = "0.4"
async-trait = "0.1.52"
serde_json = "1.0"